--- a/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
+++ b/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
@@ -14,53 +14,52 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LKWSpringerApp.Web</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse">
-                <!-- Navigation Links -->
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Driver" asp-action="Index">Drivers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Tour" asp-action="Index">Tours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="ClientImage" asp-action="Index">Media files</a>
-                    </li>
-                </ul>
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LKWSpringerApp.Web</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Driver" asp-action="Index">Drivers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tour" asp-action="Index">Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClientImage" asp-action="Index">Media files</a>
+                        </li>
+                    </ul>
 
-                @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated)
                     {
-                    <div class="d-flex align-items-center">
-                        <span class="me-3">Hello, @User.Identity.Name!</span>
+                        <div class="d-flex align-items-center">
+                            <span class="me-3">Hello, @User.Identity.Name!</span>
                             <form method="post" asp-area="Identity" asp-page="/Account/Logout">
                                 <button type="submit" class="btn btn-outline-danger btn-sm">Logout</button>
                             </form>
-                    </div>
+                        </div>
                     }
                     else
                     {
-                    <div class="d-flex align-items-center">
-                        <a class="btn btn-outline-primary btn-sm me-2" asp-area="Identity" asp-page="/Account/Login">Login</a>
-                        <a class="btn btn-outline-secondary btn-sm" asp-area="Identity" asp-page="/Account/Register">Register</a>
-                    </div>
+                        <div class="d-flex align-items-center">
+                            <a class="btn btn-outline-primary btn-sm me-2" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                            <a class="btn btn-outline-secondary btn-sm" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                        </div>
                     }
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-  
+
         <div class="container mt-3">
             <div class="row justify-content-center mb-3">
                 <div class="col-md-6">
@@ -91,3 +90,7 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+@section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+}
